# media_backup

./: Cargo.toml  README.md  build.rs  media_backup.7z
src/: enums.rs  file_opt.rs  main.rs  static_vars.rs  structs.rs
ui/: appwindow.slint  common.slint  global_struct.slint
ui/pages/: list_view_page.slint  page.slint  pages.slint
