[package]
name = "media_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bundle]
name = "media_backup"
identifier = "gyulyvgc.sniffnet"
icon = ["./ui/images/icon.jpg"]

[dependencies]
chrono = "0.4.0"
slint = "1.0"
# serde_json = "1.0.85"
image = { version = "0.24.0", default-features = false, features = [ "png" ] }
rfd = "0.11.3"
[build-dependencies]
slint-build = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true