[package]
name = "media_backup"
version = "0.1.0"
edition = "2021"
authors     = [ "Link" ]
description = "backup tool"
readme      = "README.md"
repository  = "https://github.com/link9c/media_backup"
license     = "MIT OR Apache-2.0"
keywords    = [ "filter", "gui", "backup" ]



[package.metadata.bundle]
name = "media_backup"
identifier = "Link"
icon = ["./ui/images/icon.ico"]

[dependencies]
chrono = "0.4.0"
slint = "1.0"
# serde_json = "1.0.85"
image = { version = "0.24.0", default-features = false, features = [ "png" ] }
rfd = "0.11.3"
[build-dependencies]
slint-build = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true


[target.'cfg(windows)'.build-dependencies]
winres = "*"